# dust

./: .authors  .dockerignore  .env  .env.agent.local  .env.local.example  .env.secrets.example  .envrc  .gcloudignore-dante  .git-blame-ignore-revs  .gitignore  .mailmap  .rustfmt.toml  AGENTS.md  AGENTS.override.md  CICD-PIPELINE-PLAN.md  CLAUDE.md  CLAUDE_SECRET_SWAP_DESIGN.md  CODING_RULES.md  COPYRIGHT_NOTES.md  Cargo.toml  DEPLOY.md  DEVBOX_SETUP.md  DOCKER-SETUP.md  DSBX_TOOLS_FEATURE_FLAG_PLAN.md  DUST-PLATFORM-DOCUMENTATION.md  Design Doc Human Out Of The Loop.md  ENV_SETUP.md  LICENSE  MY_CONTRIBUTIONS.md  NORTHFLANK_API_GUIDE.md  NORTHFLANK_SESSION_STATE.md  NORTHFLANK_TECHNICAL_REFERENCE.md  POSTHOG_MCP_INTEGRATION_PLAN.md  PR2_BODY.md  PRODUCT.md  README.md  REVIEWS_SWAP_DESIGN.md  SECRET_SWAP_DESIGN.md  SECURITY.md  TODO  (+38 more)
.github/: CODEOWNERS  (+3 more)
cli/dust-sandbox/: CODING_RULES.md  Cargo.toml  README.md  upsert_dsbx_to_sandbox.sh
cli/dust-sandbox/e2e/: Dockerfile  README.md  case.ts  entrypoint.sh  package.json  run.sh  smoke.ts
cli/dust-sandbox/src/: auth.rs  main.rs
cli/dust-sandbox/src/api/: client.rs  mod.rs  types.rs
cli/dust-sandbox/src/commands/: env.rs  exec.rs  healthcheck.rs  list_servers.rs  list_tools.rs  mod.rs  status.rs  version.rs
cli/dust-sandbox/src/egress_secrets/: mod.rs
cli/dust-sandbox/tests/: e2e_local.rs
core/: .dockerignore  CODING_RULES.md  Cargo.toml  Dockerfile  bacon.toml  dockerignore  fly.toml  functional_api_tests.sh  nested_function_support.md  oauth.Dockerfile  salesforce-agent-prompt.txt  start.sh
core/admin/: dev.sh  dev_oauth.sh  dev_sqlite_worker.sh  elasticsearch_run_command_from_file.sh  forever.sh  prod.sh
core/ci/: build_and_test.sh
core/examples/: README.md  arc.dust  mathd.dust  music.dust  simple.dust
core/examples/video_demo/: index.dust
core/src/: api_keys.rs  app.rs  cache.rs  cached_request.rs  consts.rs  dataset.rs  documents_search_filter.rs  gcp_auth.rs  http_utils.rs  init.rs  lib.rs  local_log_format.rs  mem_check.rs  open_telemetry.rs  otel_log_format.rs  project.rs  run.rs  search_filter.rs  secondary_api.rs  sqlite_workers.rs  utils.rs
core/src/api/: api_state.rs  data_sources.rs  databases.rs  datasets.rs  folders.rs  llm.rs  nodes.rs  projects.rs  run_manager.rs  runs.rs  specifications.rs  sqlite_workers.rs  tables.rs  tags.rs  tokenize.rs
core/src/blocks/: block.rs  browser.rs  chat.rs  code.rs  curl.rs  data.rs  data_source.rs  database.rs  database_schema.rs  datasource.rs  end.rs  google_answer.rs  helpers.rs  input.rs  llm.rs  map.rs  reduce.rs  replit.rs  search.rs  web_scrape.rs  while.rs
core/src/data_sources/: data_source.rs  file_storage_document.rs  folder.rs  node.rs  qdrant.rs  splitter.rs
core/src/databases/: csv.rs  database.rs  error.rs  table.rs  table_schema.rs  table_upserts_background_worker.rs  transient_database.rs
core/src/databases/remote_databases/: bigquery.rs  databricks.rs  get_remote_database.rs  remote_database.rs  salesforce.rs  snowflake.rs
core/src/databases_store/: gcs.rs  gcs_background.rs  postgres.rs  store.rs
core/src/datasources/: datasource.rs  splitter.rs
core/src/deno/: js_executor.rs  script.rs  sync_test.rs
core/src/http/: network.rs  proxy_client.rs  replay.rs  request.rs
core/src/oauth/: app.rs  client.rs  connection.rs  credential.rs  encryption.rs  store.rs
core/src/oauth/migrations/: 20250627_slack_bot_to_slack.sql  20251208_slack_to_slack_tools_personal_actions.sql
core/src/oauth/providers/: asana.rs  confluence.rs  confluence_tools.rs  databricks.rs  discord.rs  fathom.rs  freshservice.rs  github.rs  gmail.rs  gong.rs  google_drive.rs  hubspot.rs  intercom.rs  jira.rs  linear.rs  mcp.rs  mcp_static.rs  microsoft.rs  microsoft_tools.rs  mock.rs  mod.rs  monday.rs  notion.rs  openai.rs  outlook.rs  productboard.rs  salesforce.rs  slack.rs  slack_bot.rs  slack_tools.rs  snowflake.rs  snowflake_keypair.rs  ukg_ready.rs  utils.rs  vanta.rs  zendesk.rs
core/src/oauth/tests/: functional_connections.rs  functional_credentials.rs  utils.rs
core/src/providers/: ai21.rs  anthropic.rs  azure_openai.rs  chat_messages.rs  cohere.rs  deepseek.rs  embedder.rs  fireworks.rs  gemini.rs  google.rs  google_ai_studio.rs  google_vertex_ai.rs  helpers.rs  llm.rs  llm_messages.rs  mistral.rs  mistralai.rs  noop.rs  openai.rs  openai_compatible_helpers.rs  openai_responses_api_helpers.rs  provider.rs  textsynth.rs  togetherai.rs  xai.rs
core/src/providers/anthropic/: anthropic.rs  backend.rs  helpers.rs  image_helpers.rs  streaming.rs  types.rs
core/src/providers/sentencepiece/: sentencepiece.rs
core/src/providers/tiktoken/: anthropic_base.tiktoken  anthropic_json_to_tiktoken.js  tiktoken.rs
core/src/search_stores/: search_store.rs  search_types.rs
core/src/search_stores/indices/: data_sources_1.mappings.json  data_sources_1.settings.europe-west1.json  data_sources_1.settings.local.json  data_sources_1.settings.us-central1.json  data_sources_nodes_1.mappings.json  data_sources_nodes_1.settings.local.json  data_sources_nodes_2.mappings.json  data_sources_nodes_2.settings.us-central1.json  data_sources_nodes_3.mappings.json  data_sources_nodes_3.settings.local.json  data_sources_nodes_3.settings.us-central1.json  data_sources_nodes_4.mappings.json  data_sources_nodes_4.settings.europe-west1.json  data_sources_nodes_4.settings.local.json  data_sources_nodes_4.settings.us-central1.json  nodes_01.settings.us-central-1.json  nodes_1.mappings.json
core/src/sqlite_workers/: client.rs  databases_store.rs  sqlite_database.rs  sqlite_workers.rs  store.rs
core/src/stores/: postgres.rs  sqlite.rs  store.rs
core/src/types/: tokenizer.rs
egress-proxy/: Cargo.toml  README.md
egress-proxy/scripts/: smoke.ts
egress-proxy/src/: blocklist.rs  config.rs  connection.rs  dns.rs  domain.rs  gcs.rs  handshake.rs  health.rs  jwt.rs  main.rs  policy.rs  server.rs  tls.rs
egress-proxy/tests/: integration.rs
x/henry/spreadsheet-engine/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+20520 files in other folders)
