[package]
name = "dust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dust"
path = "bin/dust.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
pest = "2.0"
pest_derive = "2.0"
js-sandbox = "0.1"
clap = { version = "3.2", features = ["derive"] }
colored = "2.0"
shellexpand = "2.1"
blake3 = "1.3"
async-trait = "0.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.20", features = ["full"] }
hyper-tls = "0.5.0"
