[package]
name = "dust"
version = "0.1.0"
edition = "2021"

# SERVICES

[[bin]]
name = "core-api"
path = "bin/core_api.rs"

[[bin]]
name = "oauth"
path = "bin/oauth.rs"

[[bin]]
name = "sqlite-worker"
path = "bin/sqlite_worker.rs"

# UTILS

[[bin]]
name = "init_db"
path = "bin/init_db.rs"

[[bin]]
name = "elasticsearch_create_index"
path = "bin/elasticsearch/create_index.rs"

[[bin]]
name = "elasticsearch_backfill_index"
path = "bin/elasticsearch/backfill_index.rs"

[[bin]]
name = "elasticsearch_backfill_folders_index"
path = "bin/elasticsearch/backfill_folders_index.rs"

[[bin]]
name = "elasticsearch_export_nodes"
path = "bin/elasticsearch/export_nodes.rs"

[[bin]]
name = "qdrant_create_collection"
path = "bin/qdrant/create_collection.rs"

[[bin]]
name = "qdrant_shard_rebalance_suggestions"
path = "bin/qdrant/qdrant_shard_rebalance_suggestions.rs"

# [[bin]]
# name = "qdrant_migrator"
# path = "bin/qdrant/migrator.rs"

# [[bin]]
# name = "qdrant_migrate_embedder"
# path = "bin/qdrant/migrate_embedder.rs"

[[bin]]
name = "qdrant_delete_orphaned_points"
path = "bin/qdrant/delete_orphaned_points.rs"

# [[bin]]
# name = "oauth_generate_key"
# path = "bin/oauth_generate_key.rs"

[[bin]]
name = "salesforce"
path = "bin/salesforce.rs"

# MIGRATIONS

[[bin]]
name = "create_nodes"
path = "bin/migrations/20241204_create_nodes.rs"

[[bin]]
name = "fix_created_dsdocs"
path = "bin/migrations/20241203_fix_created_dsdocs.rs"

[[bin]]
name = "elasticsearch_backfill_document_tags_index"
path = "bin/migrations/20250205_backfill_document_tags_index.rs"

[[bin]]
name = "backfill_elasticsearch_text_size"
path = "bin/migrations/20250226_backfill_elasticsearch_text_size.rs"

[[bin]]
name = "backfill_tables_gcs_files"
path = "bin/migrations/20250701_backfill_tables_gcs_files.rs"


[[bin]]
name = "check_table"
path = "bin/check_table.rs"

[[test]]
name = "oauth_connections_test"
path = "src/oauth/tests/functional_connections.rs"

[[test]]
name = "oauth_credentials_test"
path = "src/oauth/tests/functional_credentials.rs"

[dependencies]
anyhow = "1.0"
async-recursion = "1.1"
async-std = "1.12"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8.4"
axum-test = "17.3.0"
axum-tracing-opentelemetry = "0.29.0"
base64 = "0.22"
bb8 = "0.8"
bb8-postgres = "0.8"
blake3 = "1.3"
bstr = "1.9"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
cloud-storage = { version = "0.11", features = ["global-client"] }
csv = "1.3.0"
csv-async = "1.3.0"
dateparser = "0.2.1"
deno_core = "0.292"
dns-lookup = "1.0"
elasticsearch = "8.15.0-alpha.1"
elasticsearch-dsl = "0.4"
eventsource-client = { git = "https://github.com/dust-tt/rust-eventsource-client", rev = "148050f8fb9f8abb25ca171aa68ea817277ca4f6" }
fancy-regex = "0.13"
flate2 = "1.0"
futures = "0.3"
gcp-bigquery-client = "0.25.1"
http = "1.1.0"
humantime = "2.2.0"
hyper = { version = "1.3.1", features = ["full"] }
init-tracing-opentelemetry =  { version = "0.29.0", features = ["tracing_subscriber_ext"] }
itertools = "0.10"
jsonwebtoken = "9.3.0"
lazy_static = "1.4"
once_cell = "1.18"
opentelemetry = "0.30.0"
opentelemetry-appender-tracing = { version = "0.30.1", features = ["experimental_use_tracing_span_context"] }
opentelemetry-otlp = "0.30.0"
opentelemetry_sdk = "0.30.0"
parking_lot = "0.12"
pest = "2.7"
pest_derive = "2.7"
pkcs8 = { version = "0.10", features = ["pem", "pkcs5", "encryption"] }
qdrant-client = "1.11"
rand = "0.8"
rayon = "1.10"
redis = { version = "0.24.0", features = ["tokio-comp"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
ring = "0.17.14"
rsa = { version = "0.9.4", features = ["pem"] }
rslock = { version = "0.4.0", default-features = false, features = ["tokio-comp"] }
rusqlite = { version = "0.31", features = ["bundled", "csvtab"] }
rustc-hash = "1.1"
sentencepiece = { version = "0.11", features = ["static"] }
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
shellexpand = "2.1"
sqids = "0.4.1"
tempfile = "3.20.0"
tera = "1.20"
thiserror = "1.0.57"
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
tokio = { version = "1.38", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
tower-http = {version = "0.5", features = ["full"]}
tracing = "0.1"
tracing-bunyan-formatter = "0.3.9"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
unicode-normalization = "0.1.24"
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.8", features = ["v4"] }
