[workspace]
resolver = "2"
members = [
  "crates/engine-core",
  "crates/engine-wasm",
  "crates/engine-cli",
  "crates/corpus-gen",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
zip = { version = "2.4", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ryu = "1"

# panic stays "unwind": engine-wasm catches panics at every entry point and maps
# them to a typed INTERNAL error instead of killing the worker (handoff §4).
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
